--- a/web/src/app/routes/usersettings/usersettings.component.html
+++ b/web/src/app/routes/usersettings/usersettings.component.html
@@ -114,9 +114,9 @@
         <li>Data temporarily stored in the cache.</li>
       </ul>
       <p>
-        Not all settings and data will be removed immediately after flusing your
-        data because some settings stored in the database are cached to improve
-        performance.
+        Not all settings and data will be removed immediately after flushing
+        your data because some settings stored in the database are cached to
+        improve performance.
       </p>
       <button class="bg-red" (click)="flushData()">DELETE USER DATA</button>
     </div>
