--- a/web/src/app/routes/info/info.component.html
+++ b/web/src/app/routes/info/info.component.html
@@ -1,4 +1,4 @@
-<div class="mt-4">
+<div class="mt-4 mb-5">
   <h2 class="mb-3">About</h2>
   <ul>
     <li>
@@ -43,6 +43,27 @@
       >
     </li>
   </ul>
+
+  <h2 class="mt-5 mb-3">Privacy</h2>
+  <app-skeleton-tile
+    *ngIf="!privacyinfo; else privacyinfoTile"
+    width="100%"
+    height="50px"
+  ></app-skeleton-tile>
+  <ng-template #privacyinfoTile>
+    <a [href]="privacyinfo.noticeurl" target="_blank">Privacy Notice</a>
+    <h5 class="mt-3 mb-3">Contact Details</h5>
+    <ul>
+      <li *ngFor="let c of privacyinfo.contact">
+        {{ c.title }}: <a *ngIf="c.url" [href]="c.url">{{ c.value }}</a>
+        <span *ngIf="!c.url">{{ c.value }}</span>
+      </li>
+    </ul>
+    <h5 class="mt-3 mb-3">Utilities</h5>
+    <ul>
+      <li><a routerLink="/usersettings">Clear your user data</a></li>
+    </ul>
+  </ng-template>
 
   <div class="d-flex mb-3 mt-5">
     <h2>System Information</h2>
