add new login route

--- a/web/src/app/components/header/header.component.html
+++ b/web/src/app/components/header/header.component.html
@@ -44,7 +44,7 @@
   </div>
 
   <ng-template #tmpLogin>
-    <div class="d-flex ml-auto">
+    <div *ngIf="!isLoginPage" class="d-flex ml-auto">
       <app-login-button (login)="onLogin()"></app-login-button>
     </div>
   </ng-template>
