--- a/web/src/app/routes/login/login.component.scss
+++ b/web/src/app/routes/login/login.component.scss
@@ -20,6 +20,10 @@
     flex-direction: column;
     align-items: center;
 
+    > div {
+      max-width: 21em;
+    }
+
     button {
       color: $c-bg-general;
       background-color: $c-font-general;
@@ -42,8 +46,13 @@
   @media screen and (max-width: 600px) {
     flex-direction: column;
     > section {
-      padding: 0 20vw 0 20vw;
+      padding: 0 10vw 0 10vw;
       justify-content: center;
     }
   }
+}
+
+.hint {
+  opacity: 0.7;
+  font-size: 0.9rem;
 }
