fix discord login button

--- a/web/src/app/routes/login/login.component.html
+++ b/web/src/app/routes/login/login.component.html
@@ -3,7 +3,7 @@
     <div>
       <p>Either log in with your Discord Account via OAuth2</p>
       <div class="mt-4">
-        <button href="/api/auth/login">
+        <button (click)="onDiscordLogin()">
           <img src="assets/dc-logo-blurple.svg" />
           <span>Login with Discord</span>
         </button>
