--- a/web/src/sass/mixins.scss
+++ b/web/src/sass/mixins.scss
@@ -22,6 +22,7 @@
 
   &:hover {
     transform: scale($scale);
-    box-shadow: 0px $shadowlen $shadowlen ($shadowlen/3) rgba(0, 0, 0, 0.3);
+    box-shadow: 0px $shadowlen $shadowlen calc($shadowlen/3) rgba(0, 0, 0, 0.3);
   }
 }
+
